package tribollojfx.model;

public enum Statut {
    A_FAIRE,
    EN_COURS,
    TERMINEE,
    ARCHIVEE,
    BLOQUEE
}